--- a/src/App.css
+++ b/src/App.css
@@ -15,14 +15,14 @@
 
 .App-header {
     width: 100%;
-    background-color: #282c34;
+    background-color: #cacf25;
     min-height: 40vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    color: white;
+    color: rgb(194, 22, 22);
 }
 
 .App-link {
